fix toast id error for user list

--- a/src/app/features/post-login/user-list/user-list.component.html
+++ b/src/app/features/post-login/user-list/user-list.component.html
@@ -299,7 +299,7 @@
 
     <p-toast key="paging" position="bottom-right"></p-toast>
     <p-toast key="issueId" position="top-right"></p-toast>
-<p-toast position="top-right" key="error"></p-toast>
+<p-toast position="top-right" key="userListError"></p-toast>
 
 <p-dialog header="Tạo người dùng bằng file excel" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
   <div>
