--- a/src/app/features/post-login/user-list/user-update/user-update.component.html
+++ b/src/app/features/post-login/user-list/user-update/user-update.component.html
@@ -51,7 +51,7 @@
             <div class="m-3">
                 <button type="submit" class="btn btn-primary"
                 (click)="confirm()"
-                >Cập nhật</button>
+                >Lưu</button>
             </div>
         </div>
         <div class="m-1 col-md-5">
