--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -303,11 +303,14 @@
           <ng-template #fileTemplate>
             <div>
               <div class="d-flex justify-content-between">
-                <div>
+                <div class="mb-1">
                   <span class="text-black-50">Tài liệu</span>
                 </div>
               </div>
-              <br />
+              <!-- <br /> -->
+              <div *ngIf="selectedAssignment.documents.length == 0">
+                <span class="font-weight-bold">Hiện tại chưa có tài liệu</span>
+              </div>
               <div *ngIf="selectedAssignment.documents.length > 0">
                 <ng-container
                   *ngFor="
@@ -410,7 +413,8 @@
 
         <!-- comment and history -->
         <ng-container *ngIf="action === 'info'">
-          <div class="tab mt-5">
+          <p-tabMenu [model]="tabs" [activeItem]="activeTab"></p-tabMenu>
+          <!-- <div class="tab mt-5">
             <button
               pButton
               (click)="showComment = true"
@@ -425,7 +429,7 @@
             >
               Lịch sử
             </button>
-          </div>
+          </div> -->
           <ng-container *ngIf="showComment; else showHistory">
             <div class="height-100">
               <br />
@@ -478,6 +482,9 @@
               </div></div
           ></ng-container>
           <ng-template #showHistory>
+            <ng-container *ngIf="historyDtos.length == 0">
+              <span class="font-weight-bold">Không có lịch sử</span>
+            </ng-container>
             <ng-container *ngFor="let item of historyDtos" class="mt-3">
               <div class="history-item row mt-2">
                 <div
