--- a/src/app/features/post-login/inspection-plan-list/create-inspection-plan/create-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan-list/create-inspection-plan/create-inspection-plan.component.html
@@ -1,3 +1,5 @@
+<p-toast position="top-right" key="deleteComplete"></p-toast>
+<p-toast position="top-right" key="deleteInComplete"></p-toast>
 <div class="container-fluid">
   <div class="row create-inspection-plan">
     <h4 class="mb-3 fw-bold">Tạo mới quyết định kiểm tra</h4>
