--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
@@ -1,5 +1,20 @@
-.small-input {
-  width: 700px;
+@import "../../../../../assets/scss/base";
+
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+}
+
+.p-inputtext{
+  border-radius: 8px;
 }
 
 .super-small-input{
@@ -20,4 +35,13 @@
 
 .icon-text {
   margin-right: 5px; /* Adjust the margin as needed */
+}
+
+tbody{
+  i{
+    width: 35px;
+    height: 35px;
+    background: $primary;
+    color: white;
+  }
 }
