--- a/src/app/features/post-login/issue-list/issue-list.component.scss
+++ b/src/app/features/post-login/issue-list/issue-list.component.scss
@@ -68,15 +68,15 @@
     }
     .td-action {
         .action-item {
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
             background-color: $primary;
-            border-color: $primary;
+            // border-color: $primary;
             border-radius: 50%;
             font-size: 16px;
             &:hover {
                 background-color: $primary-hover;
-                border-color: $primary-hover;
+                // border-color: $primary-hover;
             }
             i {
                 color: #fff;
@@ -85,14 +85,28 @@
         }
     }
     .p-highlight {
-        color: $primary;
+        // color: $primary;
         .p-sortable-column-icon {
             color: $primary;
         }
     }
-    .p-element .p-sortable-column .p-highlight {
-        color: $primary;
+    .p-highlight {
+        div {
+            color: $primary;
+        }
+        .p-dropdown-item {
+            color: white;
+        }
     }
+    .p-dropdown-item.p-highlight {
+        color: white !important;
+        background-color: $primary-hover !important;
+    }
+
+    // .p-dropdown-item.p-focus {
+    //     color: your-desired-color-for-focused-item !important;
+    //     background-color: your-desired-background-color-for-focused-item !important;
+    // }
     .p-paginator .p-paginator-pages .p-paginator-page {
         background-color: $primary-hover;
         border-radius: 50%;
@@ -102,11 +116,17 @@
         background-color: $primary;
         color: #fff;
     }
+    .p-ripple .p-element .p-dropdown-item .p-highlight .p-focus {
+    }
     ul {
         padding: 0;
+        margin: 0;
     }
 }
-
+.p-inputtext {
+    font-size: 16px;
+    width: 400px;
+}
 @media screen and (max-width: 960px) {
     :host ::ng-deep {
         .p-datatable {
