--- a/src/app/features/post-login/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue-list/issue-list.component.html
@@ -1,126 +1,167 @@
 <h4>Danh sách kế hoạch kiểm tra năm học</h4>
-
-<div class="card">
-  <p-table
-    #dt
-    [value]="issues"
-    dataKey="id"
-    [rowHover]="true"
-    [rows]="5"
-    [showCurrentPageReport]="true"
-    [rowsPerPageOptions]="[5, 10, 15]"
-    [paginator]="true"
-    currentPageReportTemplate="Hiển thị {first} đến {last} trong số {totalRecords} bản ghi"
-    [filterDelay]="0"
-    [globalFilterFields]="['name', 'school', 'role']"
-  >
-    <ng-template pTemplate="caption">
-      <div class="table-header">
-        <span>
-          <!-- <i class="bi bi-search"></i> -->
-          <input
-            pInputText
-            type="text"
-            (input)="dt.filterGlobal($any($event.target).value, 'contains')"
-            placeholder="Tìm kiếm"
-          />
-        </span>
-        <p-button
-          (click)="navigateToCreateIssue()"
-          *ngIf="isDirector"
-          class="btn-purple"
-          >Tạo mới
-        </p-button>
-      </div>
-    </ng-template>
-    <ng-template pTemplate="header">
-      <tr>
-        <th class="th-id">
-          <div>Id</div>
-        </th>
-        <th pSortableColumn="docName">
-          <div>
-            Tên
-            <p-sortIcon field="docName"></p-sortIcon>
-          </div>
-        </th>
-        <th pSortableColumn="createdBy">
-          <div>
-            Người đăng
-            <p-sortIcon field="createdBy"></p-sortIcon>
-          </div>
-        </th>
-        <th class="th-small" pSortableColumn="createdDate">
-          <div>
-            Ngày đăng
-            <p-sortIcon field="createdDate"></p-sortIcon>
-          </div>
-        </th>
-        <!-- <th pSortableColumn="docNum">
-          <div class="flex justify-content-between align-items-center">
-            Số văn bản
-            <p-sortIcon field="docNum"></p-sortIcon>
-          </div>
-        </th> -->
-        <th class="th-small" pSortableColumn="inspectorNum">
-          <div>
-            Số người
-            <p-sortIcon field="inspectorNum"></p-sortIcon>
-          </div>
-        </th>
-        <th class="th-small"></th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-issue>
-      <tr class="p-selectable-row">
-        <td>
-          <span class="p-column-title">Id</span>
-          {{ issue.issueId }}
-        </td>
-        <td>
-          <span class="p-column-title">Tên văn bản</span>
-          <div class="three-dot-text">{{ issue.issueName }}</div>
-        </td>
-        <td class="td-createdby">
-          <span class="p-column-title">Người đăng</span>
-          {{ issue.account.user.fullName }}
-        </td>
-        <td>
-          <span class="p-column-title">Date</span>
-          {{ issue.createdDate | date : "MM/dd/yyyy" }}
-        </td>
-        <!-- <td>
-          <span class="p-column-title">Số lượng văn bản</span>
-          {{ issue.docNum }}
-        </td> -->
-        <td>
-          <span class="p-column-title">Số lượng BKTNB</span>
-          {{ issue.inspectorGroupSize }}
-        </td>
-        <td
-          style="text-align: center"
-          class="d-flex td-action justify-content-center align-items-center"
-        >
-          <div
-            class="action-item d-flex justify-content-center align-items-center mx-2"
-            (click)="navigateToDetail(issue.issueId)"
-          >
-            <i class="bi bi-info-circle-fill"></i>
-          </div>
-          <div
-            class="action-item d-flex justify-content-center align-items-center mx-2"
-            (click)="navigateToUpdate(issue.issueId)"
+<ng-container *ngIf="issues.length > 0">
+  <div class="card">
+    <p-table
+      #dt
+      [value]="issues"
+      dataKey="id"
+      [rowHover]="true"
+      [rows]="5"
+      [showCurrentPageReport]="true"
+      [rowsPerPageOptions]="[5, 10, 15]"
+      [paginator]="true"
+      currentPageReportTemplate="Hiển thị {first} đến {last} trong số {totalRecords} bản ghi"
+      [filterDelay]="0"
+      [globalFilterFields]="['issueName', 'school', 'role']"
+    >
+      <ng-template pTemplate="caption">
+        <div class="table-header">
+          <span>
+            <!-- <i class="bi bi-search"></i> -->
+            <input
+              pInputText
+              type="text"
+              (input)="dt.filterGlobal($any($event.target).value, 'contains')"
+              placeholder="Tìm kiếm theo tên kế hoạch, tên người đăng"
+            />
+          </span>
+          <p-button
+            (click)="navigateToCreateIssue()"
             *ngIf="isDirector"
+            class="btn-purple"
+            >Tạo mới
+          </p-button>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="header">
+        <tr>
+          <th class="th-id">
+            <div>Id</div>
+          </th>
+          <th pSortableColumn="issueName">
+            <div class="d-flex justify-content-between align-items-center">
+              <div>
+                Tên
+                <p-sortIcon field="issueName"></p-sortIcon>
+              </div>
+              <div>
+                <p-columnFilter
+                  type="text"
+                  field="issueName"
+                  display="menu"
+                ></p-columnFilter>
+              </div>
+            </div>
+          </th>
+          <th pSortableColumn="account.user.fullName">
+            <div class="d-flex justify-content-between align-items-center">
+              <div>
+                Người đăng
+                <p-sortIcon field="account.user.fullName"></p-sortIcon>
+              </div>
+              <div>
+                <p-columnFilter
+                  type="text"
+                  field="account.user.fullName"
+                  display="menu"
+                ></p-columnFilter>
+              </div>
+            </div>
+          </th>
+          <th class="th-small" pSortableColumn="createdDate">
+            <div class="d-flex justify-content-between align-items-center">
+              <div>
+                Ngày đăng
+                <p-sortIcon field="createdDate"></p-sortIcon>
+              </div>
+              <div>
+                <p-columnFilter
+                  type="date"
+                  field="createdDate"
+                  display="menu"
+                ></p-columnFilter>
+              </div>
+            </div>
+          </th>
+          <!-- <th pSortableColumn="docNum">
+            <div class="flex justify-content-between align-items-center">
+              Số văn bản
+              <p-sortIcon field="docNum"></p-sortIcon>
+            </div>
+          </th> -->
+          <th class="th-small" pSortableColumn="inspectorGroupSize">
+            <div class="d-flex justify-content-between align-items-center">
+              <div>
+                Số người
+                <p-sortIcon field="inspectorGroupSize"></p-sortIcon>
+              </div>
+              <div>
+                <p-columnFilter
+                  type="numeric"
+                  field="inspectorGroupSize"
+                  display="menu"
+                ></p-columnFilter>
+              </div>
+            </div>
+          </th>
+          <th class="th-small"></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-issue>
+        <tr class="p-selectable-row">
+          <td>
+            <span class="p-column-title">Id</span>
+            {{ issue.issueId }}
+          </td>
+          <td>
+            <span class="p-column-title">Tên kế hoạch kiểm tra</span>
+            <div class="three-dot-text">{{ issue.issueName }}</div>
+          </td>
+          <td class="td-createdby">
+            <span class="p-column-title">Người đăng</span>
+            {{ issue.account.user.fullName }}
+          </td>
+          <td>
+            <span class="p-column-title">Date</span>
+            {{ issue.createdDate | date : "MM/dd/yyyy" }}
+          </td>
+          <!-- <td>
+            <span class="p-column-title">Số lượng văn bản</span>
+            {{ issue.docNum }}
+          </td> -->
+          <td>
+            <span class="p-column-title">Số lượng BKTNB</span>
+            {{ issue.inspectorGroupSize }}
+          </td>
+          <td
+            style="text-align: center"
+            class="d-flex td-action justify-content-center align-items-center"
           >
-            <i class="bi bi-pencil-fill"></i>
-          </div>
-        </td>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="8">Không tìm thấy kế hoạch nào</td>
-      </tr>
-    </ng-template>
-  </p-table>
-</div>
+            <div
+              pTooltip="Chi tiết"
+              tooltipPosition="top"
+              class="action-item d-flex justify-content-center align-items-center mx-2"
+              (click)="navigateToDetail(issue.issueId)"
+            >
+              <i class="bi bi-info-circle-fill"></i>
+            </div>
+            <div
+              pTooltip="Chỉnh sửa"
+              tooltipPosition="top"
+              class="action-item d-flex justify-content-center align-items-center mx-2"
+              (click)="navigateToUpdate(issue.issueId)"
+              *ngIf="isDirector"
+            >
+              <i class="bi bi-pencil-fill"></i>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="8">Không tìm thấy kế hoạch nào</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</ng-container>
