--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,5 +72,11 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family:  "Helvetica Neue", sans-serif; }
+.mat-typography {
+  font-family: inherit !important;
 }
