--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -65,7 +65,7 @@
     <ng-template pTemplate="caption">
       <div class="d-flex justify-content-between align-items-center">
         <div>
-          <h6>Danh sách công việc</h6>
+          <h6 class="mat-headline-6">Danh sách công việc</h6>
         </div>
         <div>
           <button
