Fix css login form/base

--- a/src/app/features/login/login-base/login-base.component.html
+++ b/src/app/features/login/login-base/login-base.component.html
@@ -6,7 +6,9 @@
         <router-outlet></router-outlet>
       </div>
       <div class="col right-inner-box rounded-3 my-4 me-4">
-        <p class="fs-2 fw-bold text-white mx-3 mt-5">Hệ thống Quản lý <br> cấp Quận <br> các Trường Mầm Non</p>
+        <p class="fs-2 fw-bold text-white mx-3 mt-5">Hệ thống Quản lý</p>
+        <p class="fs-2 fw-bold text-white mx-3 mt-3">cấp Quận</p>
+        <p class="fs-2 fw-bold text-white mx-3 mt-3">các Trường Mầm Non</p>
         <div class="mx-3 my-5">
           <img src="assets/pictures/login.png" alt="" class="rounded w-100 h-100">
         </div>
