--- a/src/app/features/login/forgot-password/forgot-password.component.html
+++ b/src/app/features/login/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
   <p class="fw-bold">Sử dụng email để lấy lại mật khẩu</p>
   <form  class="forgot-password-form" [formGroup]="form">
     <div>
-      <label for="exampleInputEmail1" class="form-label fw-bold">Email</label>
+      <label for="exampleInputEmail1" class="form-label fw-bold mb-1">Email</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
              placeholder="Nhập email đã đăng ký"
              formControlName = 'email'
