--- a/src/app/features/login/login-form/login-form.component.html
+++ b/src/app/features/login/login-form/login-form.component.html
@@ -2,14 +2,14 @@
 <p class="fw-bold">Đăng nhập vào hệ thống sử dụng tài khoản được cấp</p>
 <form class="login-form" [formGroup]="signInForm" (ngSubmit)="login()">
   <div>
-    <label for="exampleInputEmail1" class="form-label fw-bold fs-5">Email</label>
+    <label for="exampleInputEmail1" class="form-label fw-bold fs-5 mb-1">Email</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
            placeholder="Đăng nhập sử dụng email được cung cấp" formControlName="email">
   </div>
   <div>
     <div class="d-flex justify-content-between">
-      <label for="exampleInputPassword1" class="form-label fw-bold fs-5">Mật khẩu</label>
-      <a routerLink="/forgot_password">Quên mật khẩu ?</a>
+      <label for="exampleInputPassword1" class="form-label fw-bold fs-5 mb-1">Mật khẩu</label>
+      <a class="mb-1" routerLink="/forgot_password">Quên mật khẩu ?</a>
     </div>
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Mật khẩu" formControlName="password">
   </div>
