--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @import "node_modules/primeng/resources/themes/saga-blue/theme.css"; /* Replace with your preferred theme */
 @import "ag-grid-community/styles/ag-grid.css";
 @import "ag-grid-community/styles/ag-theme-alpine.css";
+@import "assets/scss/base.scss";
 //SCROLLBAR CSS
 /* width */
 ::-webkit-scrollbar {
@@ -31,6 +32,7 @@
 }
 :root {
   $primary: #4253f0;
+  $primary-hover: #9aa3ff;
 }
 
 // Tag
@@ -75,8 +77,19 @@ body {
   font-family: "Helvetica Neue", sans-serif;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family:  "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Helvetica Neue", sans-serif;
+}
 .mat-typography {
   font-family: inherit !important;
+}
+.td-content {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
