--- a/src/app/features/post-login/issue-list/issue-list.component.scss
+++ b/src/app/features/post-login/issue-list/issue-list.component.scss
@@ -23,11 +23,6 @@
     .p-datatable > .p-datatable-wrapper {
         overflow: hidden;
     }
-    .p-paginator {
-        .p-paginator-current {
-            border-radius: 50%;
-        }
-    }
 
     .table-header {
         display: flex;
@@ -44,6 +39,7 @@
             font-size: 16px;
             background-color: $primary;
             border-radius: 8px;
+            border: none;
             &:hover,
             &:active {
                 background-color: $primary-hover;
@@ -98,9 +94,11 @@
             color: white;
         }
     }
-    .p-dropdown-item.p-highlight {
-        color: white !important;
-        background-color: $primary-hover !important;
+    .p-paginator-rpp-options .p-dropdown {
+        .p-dropdown-item.p-highlight {
+            color: white !important;
+            background-color: $primary-hover !important;
+        }
     }
 
     // .p-dropdown-item.p-focus {
@@ -108,13 +106,11 @@
     //     background-color: your-desired-background-color-for-focused-item !important;
     // }
     .p-paginator .p-paginator-pages .p-paginator-page {
-        background-color: $primary-hover;
         border-radius: 50%;
-        color: #fff;
-    }
-    .p-paginator .p-paginator-pages .p-paginator-page .p-highlight {
-        background-color: $primary;
-        color: #fff;
+        &.p-highlight {
+            background-color: $primary-hover !important;
+            color: #fff !important;
+        }
     }
     .p-ripple .p-element .p-dropdown-item .p-highlight .p-focus {
     }
@@ -122,10 +118,31 @@
         padding: 0;
         margin: 0;
     }
+    .p-dropdown-items-wrapper {
+        ul {
+            padding: 0;
+            margin: 0;
+        }
+    }
+    ul.p-dropdown-items {
+        padding: 0 !important;
+        margin: 0 !important;
+    }
+    .p-column-filter-menu-button-active {
+        // background-color: #cfd3ff;
+        background-color: $primary;
+        color: #fff;
+        border-radius: 50%;
+    }
 }
 .p-inputtext {
     font-size: 16px;
     width: 400px;
+}
+:host ::ng-deep .p-column-filter-operator {
+    .p-dropdown {
+        border-radius: 8px;
+    }
 }
 @media screen and (max-width: 960px) {
     :host ::ng-deep {
@@ -164,4 +181,7 @@
             }
         }
     }
+}
+.mat-headline-4 {
+    margin: 0;
 }
