--- a/src/app/features/post-login/school-list/school-list.component.html
+++ b/src/app/features/post-login/school-list/school-list.component.html
@@ -10,16 +10,17 @@
 />
 <h2>Danh sách các trường</h2>
 <div class="d-flex justify-content-end mb-3" *ngIf="!isDirector">
-  <button (click)="showImportSchool()"
-          class="btn btn-info ml-3 mr-3"
-          *ngIf="isAdmin"
-  >Nhập trường bằng file excel</button>
+  <button
+    (click)="showImportSchool()"
+    class="btn btn-info ml-3 mr-3"
+    *ngIf="isAdmin"
+  >
+    Nhập trường bằng file excel
+  </button>
 
-  <button class="btn btn-primary"
-          (click)="onCreateSchool()"
-          *ngIf="isAdmin"
-  >Tạo mới</button>
-
+  <button class="btn btn-primary" (click)="onCreateSchool()" *ngIf="isAdmin">
+    Tạo mới
+  </button>
 </div>
 <div class="card">
   <p-table
@@ -47,13 +48,13 @@
             placeholder="&#xF002; Tra cứu nhanh theo tên trường hoặc địa chỉ"
           />
         </span>
-        <button
+        <!-- <button
           pButton
           label="Clear"
           class="p-button-outlined"
           icon="pi pi-filter-slash"
           (click)="clear(dt1)"
-        ></button>
+        ></button> -->
       </div>
     </ng-template>
     <ng-template pTemplate="header">
@@ -160,6 +161,8 @@
           <div
             class="action-item d-flex justify-content-center align-items-center mx-2"
             (click)="onDetail(school.schoolId)"
+            pTooltip="Chi tiết"
+            tooltipPosition="top"
           >
             <i class="bi bi-info-circle-fill"></i>
           </div>
@@ -167,31 +170,46 @@
             class="action-item d-flex justify-content-center align-items-center mx-2"
             (click)="onUpdate(school.schoolId)"
             *ngIf="isAdmin"
+            pTooltip="Chỉnh sửa"
+            tooltipPosition="top"
           >
             <i class="bi bi-pencil-fill"></i>
           </div>
         </td>
       </tr>
     </ng-template>
+    <ng-template pTemplate="emptymessage">
+      <tr>
+        <td colspan="5">Không tìm thấy trường nào phù hợp</td>
+      </tr>
+    </ng-template>
   </p-table>
 </div>
-<p-dialog header="Tạo trường bằng file excel" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
+<p-dialog
+  header="Tạo trường bằng file excel"
+  [(visible)]="visible"
+  [modal]="true"
+  [style]="{ width: '50vw' }"
+  [draggable]="false"
+  [resizable]="false"
+>
   <div>
     <input
-            class="form-control"
-            required
-            (change)="onSubmitFile($event)"
-            type="file"
+      class="form-control"
+      required
+      (change)="onSubmitFile($event)"
+      type="file"
     />
-    <button class="btn btn-primary mt-3" (click)="confirm()">
-      Xác nhận
-    </button>
+    <button class="btn btn-primary mt-3" (click)="confirm()">Xác nhận</button>
     <button class="btn btn-info mt-3 ml-3" (click)="downloadTemplate()">
       Tải file mẫu
     </button>
   </div>
 </p-dialog>
-<p-confirmDialog key="createSchoolByExcel" [style]="{width: '50vw'}"></p-confirmDialog>
+<p-confirmDialog
+  key="createSchoolByExcel"
+  [style]="{ width: '50vw' }"
+></p-confirmDialog>
 <p-toast position="top-right" key="error"></p-toast>
 <app-loading-complete-dialog
   [visible]="isLoading"
