--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -108,7 +108,11 @@
             [(ngModel)]="selectedStatus"
             [showClear]="true"
             (onChange)="loadDocuments()"
-          ></p-dropdown>
+          >
+            <ng-template let-status pTemplate="item">
+              <p-tag [severity]="getStatusSeverity(status.value)" [value]="status.label"></p-tag>
+            </ng-template>
+          </p-dropdown>
         </div>
       </div>
     </div>
@@ -117,7 +121,7 @@
     </div>
   </div>
   <div class="table">
-    <table class="table table-responsive table-fit p-2">
+    <table class="table table-responsive table-fit p-2 table-hover">
       <thead>
       <tr>
         <th (click)="onSort('initiationPlanName')">
@@ -199,7 +203,7 @@
       </tbody>
     </table>
     <div class="d-flex justify-content-center table-footer">
-      <div class="me-3" *ngIf="schoolInitPlans && schoolInitPlans.length > 0">
+      <div class="me-3 mt-3" *ngIf="schoolInitPlans && schoolInitPlans.length > 0">
         <pagination-controls
           previousLabel=""
           nextLabel=""
@@ -208,7 +212,7 @@
         </pagination-controls>
       </div>
       <div class="d-flex justify-content-center align-items-center" *ngIf="schoolInitPlans && schoolInitPlans.length > 0">
-        <select (change)="loadDocuments()" class="form-control super-small-input ng-untouched ng-pristine ng-valid"
+        <select (change)="loadDocuments()" class="form-select ng-untouched ng-pristine ng-valid"
                 [(ngModel)]="pageSize">
           <option *ngFor="let option of recordPerPageOption" [value]="option">{{ option }}</option>
         </select>
