--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
@@ -18,11 +18,6 @@
   border-radius: 8px;
 }
 
-.super-small-input {
-  width: 60px;
-
-}
-
 .loading {
   z-index: 100;
 }
@@ -94,21 +89,24 @@
     }
 
     td {
+      font-size: 16px;
       border: none;
     }
   }
 }
 
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #e9ecef;
+}
+
 .table-footer {
   background-color: white;
-
   select{
-    height: 40%;
-    margin-bottom: 5px;
-    font-size: 16px;
+    padding-right: 50px;
+    margin-top: 10px;
     option{
       font-size: 20px;
-      background-color: $primary !important;
+      background-color: white !important;
       :hover{
         background-color: $primary-hover;
       }
