--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.scss
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.scss
@@ -1,115 +1,4 @@
 @import "../../../../assets/scss/base";
-
-:host ::ng-deep {
-    table {
-        table-layout: fixed;
-        width: 100%;
-    }
-    th,
-    td {
-        font-size: 16px;
-        white-space: wrap; /* Prevent text from wrapping */
-        overflow: hidden; /* Hide overflowing text */
-        text-overflow: ellipsis; /* Display ellipsis for overflowing text */
-    }
-    td {
-        padding: 16px;
-    }
-    //  {
-    //     width: 100px;
-    //     overflow: hidden;
-    //     font-size: 16px;
-    // }
-    .p-datatable > .p-datatable-wrapper {
-        overflow: hidden;
-    }
-    .p-paginator {
-        .p-paginator-current {
-            border-radius: 50%;
-        }
-    }
-
-    .table-header {
-        display: flex;
-        justify-content: space-between;
-        .p-input-icon-left {
-            input {
-                border: 1px solid $primary;
-            }
-            i {
-                color: $primary;
-            }
-        }
-        button {
-            width: 100px;
-            font-size: 16px;
-            background-color: $primary;
-            border-radius: 8px;
-            &:hover,
-            &:active {
-                background-color: $primary-hover;
-                border-color: $primary-hover;
-            }
-        }
-    }
-
-    .p-w-100 {
-        width: 100%;
-    }
-
-    /* Responsive */
-    .p-datatable-customers .p-datatable-tbody > tr > td .p-column-title {
-        display: none;
-    }
-    .th-id {
-        width: 60px;
-    }
-    .th-small {
-        width: 200px;
-    }
-    .td-action {
-        .action-item {
-            width: 40px;
-            height: 40px;
-            background-color: $primary;
-            border-color: $primary;
-            border-radius: 50%;
-            font-size: 16px;
-            &:hover {
-                background-color: $primary-hover;
-                border-color: $primary-hover;
-            }
-            i {
-                color: #fff;
-                align-items: center;
-            }
-        }
-    }
-    .p-highlight {
-        color: $primary;
-        .p-sortable-column-icon {
-            color: $primary;
-        }
-    }
-    .p-paginator .p-paginator-pages .p-paginator-page {
-        border-radius: 50%;
-    }
-    .p-paginator .p-paginator-pages .p-paginator-page .p-highlight {
-        background-color: $primary;
-        color: #fff;
-    }
-    ul {
-        padding: 0;
-    }
-}
-.small-input {
-  width: 700px;
-}
-
-.super-small-input{
-  width: 60px;
-
-}
 .loading{
   z-index: 100;
 }
@@ -123,15 +12,160 @@
 }
 
 .icon-text {
-  margin-right: 5px; /* Adjust the margin as needed */
+  margin-right: 5px;
 }
-table.table-fit {
-  width: auto !important;
-  table-layout: auto !important;
+
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+
+  .p-tag {
+    border-radius: 20px;
+  }
 }
-table.table-fit thead th,
-table.table-fit tbody td,
-table.table-fit tfoot th,
-table.table-fit tfoot td {
-  width: auto !important;
+
+.p-inputtext {
+  border-radius: 8px;
 }
+
+.action-button {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: none;
+  background: $primary;
+
+  i {
+    color: white;
+  }
+}
+
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+
+::ng-deep .p-dropdown {
+  width: 100%;
+  border-radius: 8px;
+}
+
+::ng-deep ul {
+  padding: 0;
+  margin-bottom: 0;
+  font-size: 16px;
+}
+
+.table-container {
+  border: 0.8px solid #d2d2d2;
+  border-radius: 8px;
+  background-color: #f8f9fa;
+
+  .advance-search {
+  }
+}
+
+.table-content {
+  margin-bottom: 0;
+
+  .table {
+    margin-bottom: 0;
+
+    thead {
+      font-size: 17px;
+      border-top: 0.8px solid #eef0f3;
+      tr {
+        th {
+          border-bottom: none;
+          background-color: #f8f9fa;
+          font-weight: 600;
+          color: #495057;
+          padding-bottom: 20px !important;
+        }
+      }
+    }
+
+    tr {
+      border: none;
+    }
+
+    td {
+      font-size: 15px;
+      border: none;
+    }
+  }
+}
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #e9ecef;
+}
+
+.table-footer {
+  background-color: white;
+  border-radius: 0 0 8px 8px;
+  select {
+    margin-top: 10px;
+    option {
+      font-size: 20px;
+      background-color: white !important;
+
+      :hover {
+        background-color: $primary-hover;
+      }
+    }
+  }
+
+  ::ng-deep .ngx-pagination {
+    width: auto !important;
+    display: flex;
+    font-size: 20px;
+    .small-screen {
+      display: none;
+    }
+    .pagination-previous, .pagination-next {
+      font-size: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    li {
+      margin-right: 5px;
+      margin-left: 5px;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      border-radius: 50%;
+      align-items: center;
+      justify-content: center;
+
+      a {
+        text-decoration: none !important;
+        background: none !important;
+      }
+    }
+
+    .current {
+      background-color: $primary !important;
+      opacity: 0.5;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
