--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -24,6 +24,7 @@
                    name="planName"
                    id="planName"
                    (keyup)="loadDocuments()"
+                   pInputText
                    placeholder="(VD): Kế hoạch của Trường Mầm Non Ánh Sao"
             >
           </div>
@@ -121,7 +122,7 @@
     </div>
   </div>
   <div class="table-content">
-    <table class="table p-2 table-hover">
+    <table class="table p-2 table-hover align-middle">
       <thead>
       <tr>
         <th (click)="onSort('initiationPlanName')" >
@@ -188,9 +189,9 @@
           let i = index
         "
         >
-          <td class="py-3 px-2" style="width: 30%">{{ plan.initiationPlanName }}</td>
-          <td class="py-3 px-2" style="width: 17%">{{ plan.issueName }}</td>
-          <td class="py-3 px-2" style="width: 17%">{{ plan.schoolName }}</td>
+          <td class="py-3 px-2" style="width: 32%">{{ plan.initiationPlanName }}</td>
+          <td class="py-3 px-2" style="width: 16%">{{ plan.issueName }}</td>
+          <td class="py-3 px-2" style="width: 16%">{{ plan.schoolName }}</td>
           <td class="py-3 px-2" style="width: 9%"> {{ plan.createdDate  | date : "dd/MM/yyyy" }}</td>
           <td class="py-3 px-2" style="width: 9%">{{ plan.deadline | date : "dd/MM/yyyy" }}</td>
           <td class="py-3 px-2" style="width: 18%">
@@ -223,6 +224,5 @@
     </div>
     <p-toast key="paging" position="bottom-right"></p-toast>
     <p-toast key="issueId" position="top-right"></p-toast>
-
   </div>
 </div>
