--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
@@ -109,9 +109,8 @@
 
 .table-footer {
   background-color: white;
-
+  border-radius: 0 0 8px 8px;
   select {
-    padding-right: 50px;
     margin-top: 10px;
 
     option {
@@ -125,14 +124,12 @@
   }
 
   ::ng-deep .ngx-pagination {
-    width: 300px !important;
+    width: auto !important;
     display: flex;
     font-size: 20px;
-
     .small-screen {
       display: none;
     }
-
     .pagination-previous, .pagination-next {
       font-size: 30px;
       display: flex;
