Update inspection plan list UX UI

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,12 @@
   padding: 5px 20px;
 }
 
+.p-tag.p-tag-primary {
+  background-color: #3b82f6;
+  color: white;
+  padding: 5px 20px;
+}
+
 .p-tag.p-tag-danger {
   color: #b42318;
   background-color: #fef3f2;
