--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
@@ -109,7 +109,9 @@
             [showClear]="true"
             (onChange)="loadDocuments()"
           >
-
+            <ng-template let-status pTemplate="item">
+              <p-tag [severity]="getStatusSeverity(status.value)" [value]="status.label"></p-tag>
+            </ng-template>
           </p-dropdown>
         </div>
       </div>
@@ -187,9 +189,11 @@
         <td class="py-3 px-2" style="width: 16%">{{ plan.schoolName }}</td>
         <td class="py-3 px-2" style="width: 13%">{{ plan.startDate  | date : "dd/MM/yyyy" }}</td>
         <td class="py-3 px-2" style="width: 11%">{{ plan.endDate | date : "dd/MM/yyyy" }}</td>
-        <td class="py-3 px-2" style="width: 16%">{{ plan.statusName}}</td>
+        <td class="py-3 px-2" style="width: 16%">
+<!--          <p-tag [severity]="getStatusSeverity(plan?.status?.statusId)" [value]="plan.statusName"></p-tag>-->
+        </td>
         <td class="py-3 px-2">
-          <button  class="action-button" type="button" (click)="onDetail(plan.inspectionPlanId)">
+          <button class="action-button" type="button" (click)="onDetail(plan.inspectionPlanId)">
             <i class="bi bi-info-circle-fill"></i>
           </button>
         </td>
@@ -206,7 +210,8 @@
         >
         </pagination-controls>
       </div>
-      <div class="d-flex justify-content-center align-items-center" *ngIf="inspectionPlans && inspectionPlans.length > 0">
+      <div class="d-flex justify-content-center align-items-center"
+           *ngIf="inspectionPlans && inspectionPlans.length > 0">
         <select (change)="loadDocuments()" class="form-select ng-untouched ng-pristine ng-valid"
                 [(ngModel)]="pageSize">
           <option *ngFor="let option of recordPerPageOption" [value]="option">{{ option }}</option>
